--- a/_config.yml
+++ b/_config.yml
@@ -1,42 +1,30 @@
-# Hexo Configuration
-## Docs: https://hexo.io/docs/configuration.html
-## Source: https://github.com/hexojs/hexo/
-
-# Site
 title: Jun's Blog
-subtitle: "Code builds world !"
-description: "欢迎来到我的世界💜"
-keywords:
+subtitle: Code builds world !
+description: 欢迎来到我的世界💜
+keywords: null
 author: Jun
 language: zh-CN
-timezone: "Asia/Shanghai"
-
-# URLhttp://example.com
-## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
+timezone: Asia/Shanghai
 url: http://example.com
-permalink: :year/:month/:day/:title/
-permalink_defaults:
+permalink: ':year/:month/:day/:title/'
+permalink_defaults: null
 pretty_urls:
-  trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
-  trailing_html: true # Set to false to remove trailing '.html' from permalinks
-
-# Directory
+  trailing_index: true
+  trailing_html: true
 source_dir: source
 public_dir: public
 tag_dir: tags
 archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
-i18n_dir: :lang
-skip_render:
-
-# Writing
-new_post_name: :title.md # File name of new posts
+i18n_dir: ':lang'
+skip_render: null
+new_post_name: ':title.md'
 default_layout: post
-titlecase: false # Transform title into titlecase
+titlecase: false
 external_link:
-  enable: true # Open external links in new tab
-  field: site # Apply to the whole site
+  enable: true
+  field: site
   exclude: ''
 filename_case: 0
 render_drafts: false
@@ -44,7 +32,6 @@ post_asset_folder: false
 marked:
   prependRoot: false
   postAsset: false
-
 relative_link: false
 future: true
 syntax_highlighter: highlight.js
@@ -58,91 +45,41 @@ prismjs:
   preprocess: true
   line_number: true
   tab_replace: ''
-
-# Home page setting
-# path: Root path for your blogs index page. (default = '')
-# per_page: Posts displayed per page. (0 = disable pagination)
-# order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
   per_page: 10
-  order_by: -date
-
-# Category & Tag
+  order_by: '-date'
 default_category: uncategorized
-category_map:
-tag_map:
-
-# Metadata elements
-## https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
+category_map: null
+tag_map: null
 meta_generator: true
-
-# Date / Time format
-## Hexo uses Moment.js to parse and display date
-## You can customize the date format as defined in
-## http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
-## updated_option supports 'mtime', 'date', 'empty'
-updated_option: 'mtime'
-
-# Pagination
-## Set per_page to 0 to disable pagination
+updated_option: mtime
 per_page: 10
 pagination_dir: page
-
-# Include / Exclude file(s)
-## include:/exclude: options only apply to the 'source/' folder
-include:
-exclude:
-ignore:
-
-# Extensions
-## Plugins: https://hexo.io/plugins/
-## Themes: https://hexo.io/themes/
-##theme: next
+include: null
+exclude: null
+ignore: null
 theme: butterfly
-
-
-
-
-#搜索配置
-search:
+search: null
 path: search.xml
 field: post
 format: html
-#limit: 10000
 content: true
-
-# 这是有vip限制的那版
 aplayer:
   meting: true
   asset_inject: false
-
-
-
-  # Deployment
-## Docs: https://hexo.io/docs/one-command-deployment
-deploy:
-  type:
-  # type: git
-  # repository: https://github.com/junma168/blog.git
-  # branch: master
-# hexo-admin authentification
-# admin:
-#   username: admin
-#   password_hash: $2a$10$CmyrTjyDl00TzSJH2YIX2uZ0Js7FUxkCzYUyVMmBlv6T9ToNksMKK
-#   secret: firstlove
-#   deployCommand: 'hexo-deploy.bat'
-# hexo-admin authentification
-
-kramed:
-  gfm: true
-  pedantic: false
-  sanitize: false
-  tables: true
-  breaks: true
-  smartLists: true
-  smartypants: true
-
-
+# deploy:
+#   type: git
+#   repo: https://github.com/junma168/blog.git
+#   branch: master
+#   message: 'Site updated: {{ now("YYYY-MM-DD HH:mm:ss") }}'
+# kramed:
+#   gfm: true
+#   pedantic: false
+#   sanitize: false
+#   tables: true
+#   breaks: true
+#   smartLists: true
+#   smartypants: true
