--- a/_config.yml
+++ b/_config.yml
@@ -74,4 +74,4 @@ deploy:
   type: git
   repo: https://github.com/junma168/blog.git
   branch: master
-  message: 新增文章-资料分析5
+  message: 新增文章-资料分析6-11
