配置文件更新

--- a/source/_data/about.yml
+++ b/source/_data/about.yml
@@ -13,7 +13,7 @@
       - 脚踏实地行动派 🏃
       - 团队小组发动机 🧱
       - 壮汉人狠话不多 💢
-  name: 本质微光
+  name: 微光
   description: 是一名 计算机从业者、博主
   aboutsiteTips:
     tips: 追求
