--- a/themes/anzhiyu/_config.yml
+++ b/themes/anzhiyu/_config.yml
@@ -6,7 +6,7 @@ menu:
 
   友链:
     友链: /link/ || anzhiyu-icon-link
-    # 朋友圈: /fcircle/ || anzhiyu-icon-artstation
+    # 朋友圈: /docs1/ || anzhiyu-icon-artstation
     留言板: /comments/ || anzhiyu-icon-envelope
 
   我的:
@@ -32,6 +32,11 @@ nav:
         - name: 博客
           link: https://junma.netlify.app/
           icon: /avatar_32x32.ico
+    - title: 网页
+      item:
+        - name: 文档
+          link: https://docs-vitepress.netlify.app/
+          icon: /logo.png
     # - title: 项目
     #   item:
     #     - name: 安知鱼图床
@@ -1241,11 +1246,12 @@ inject:
   head:
     # 自定义css
     # - <link rel="stylesheet" href="/css/custom.css" media="defer" onload="this.media='all'">
-
+    - <link rel="stylesheet" href="/custom/css/footanimal.css">
+    - <link rel="stylesheet" href="/custom/css/font.css">
   bottom:
     # 自定义js
     # - <script src="/js/xxx"></script>
-    - <link rel="stylesheet" href="/custom/css/font.css">
+   
 
 # CDN
 # Don't modify the following settings unless you know how they work
@@ -1266,6 +1272,8 @@ CDN:
   # Custom format
   # For example: https://cdn.staticfile.org/${cdnjs_name}/${version}/${min_cdnjs_file}
   custom_format: # https://npm.elemecdn.com/${name}@latest/${file}
+  
+
 
   option:
     # main_css:
